crates/glyph-frontend/src/snapshots/glyph_frontend__mir_lower__tests__lowers_if_else_to_blocks_and_returns.snap
---
source: crates/glyph-frontend/src/mir_lower.rs
assertion_line: 180
expression: blocks
---
[
    MirBlock(
        MirBlock {
            insts: [
                If {
                    cond: Bool(true),
                    then_bb: BlockId(
                        1,
                    ),
                    else_bb: BlockId(
                        2,
                    ),
                },
            ],
        },
    ),
    MirBlock(
        MirBlock {
            insts: [
                Return(
                    Some(
                        Int(
                            1,
                        ),
                    ),
                ),
            ],
        },
    ),
    MirBlock(
        MirBlock {
            insts: [
                Return(
                    Some(
                        Int(
                            0,
                        ),
                    ),
                ),
            ],
        },
    ),
]
